Added configurable map offsets
